atualizando novo projeto

--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@
             
             <div class="box projeto">
 
+                <div class="card card6">                        
+                    <a class="link" href="./GaleriaFotos/home.html" id="link">Galleria</a>
+                    <img class="foto-logo" src="" alt="foto">
+                </div> 
+
                 <div class="card card1">                       
                     <a class="link" href="./BarberShop/index.html" id="link">Barber Shop</a>
                     <img class="foto-logo" src="./barber.png" alt="foto">
