novo projeto calculadora

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
                 <div class="card card6">                        
                     <a class="link" href="./GaleriaFotos/home.html" id="link">Galleria</a>
-                    <img class="foto-logo" src="" alt="foto">
+                    <img class="foto-logo" src="./galeria.jpg" alt="foto">
                 </div> 
 
                 <div class="card card1">                       
