--- a/index.html
+++ b/index.html
@@ -124,7 +124,12 @@
             
             <div class="box projeto">
 
-                <div class="card card6">                        
+                <div class="card card8">                        
+                    <a class="link" href="./Calculadora/CalculadoraJs.html" id="link">Calculadora-Js</a>
+                    <img class="foto-logo" src="./calculadora.png" alt="foto">
+                </div> 
+
+                <div class="card card7">                        
                     <a class="link" href="./GaleriaFotos/home.html" id="link">Galleria</a>
                     <img class="foto-logo" src="./galeria.jpg" alt="foto">
                 </div> 
