--- a/Calculadora/CalculadoraJs.html
+++ b/Calculadora/CalculadoraJs.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div id="calc">
-        <h3>Calculadora JavaScript</h3>
+        <h3>Calculadora </h3>
         <div id="operations">
             <div id="previous-operation">6569562</div>
             <div id="current-operation">65465151</div>
