atualização calculdora css

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
                 <div class="card card8">                        
                     <a class="link" href="./Calculadora/CalculadoraJs.html" id="link">Calculadora-Js</a>
-                    <img class="foto-logo" src="./calculadora.png" alt="foto">
+                    <img class="foto-logo" src="./calculadorajs.png" alt="foto">
                 </div> 
 
                 <div class="card card7">                        
