--- a/Calculadora/CalculadoraJs.html
+++ b/Calculadora/CalculadoraJs.html
@@ -18,8 +18,8 @@
     <div id="calc">
         <h3>Calculadora </h3>
         <div id="operations">
-            <div id="previous-operation">696</div>
-            <div id="current-operation">666</div>
+            <div id="previous-operation">000</div>
+            <div id="current-operation"></div>
         </div>
         <div id="buttons-container">
             <button>CE</button>
