finalinando calculadora js

--- a/Calculadora/CalculadoraJs.html
+++ b/Calculadora/CalculadoraJs.html
@@ -18,7 +18,7 @@
     <div id="calc">
         <h3>Calculadora </h3>
         <div id="operations">
-            <div id="previous-operation">000</div>
+            <div id="previous-operation"></div>
             <div id="current-operation"></div>
         </div>
         <div id="buttons-container">
